--- a/gindex.html
+++ b/gindex.html
@@ -27,10 +27,7 @@
             <div class="tab">Popular</div>
         </div>
         <div class="grid">
-            <div class="category" onclick="openCategory('Pooja Essentials')">
-                <img src="https://m.media-amazon.com/images/I/81XxcHqNbEL._AC_UF894,1000_QL80_.jpg" alt="Pooja Essentials">
-                <p>Pooja Essentials</p>
-            </div>
+           
             <div class="category" onclick="openCategory('Fruits & Vegetables')">
                 <img src="https://thumbs.dreamstime.com/b/fresh-vegetables-sale-indian-street-market-assorted-261843812.jpg" alt="Fruits & Vegetables">
                 <p>Fruits & Vegetables</p>
@@ -45,7 +42,7 @@
             </div>
             <div class="category" onclick="openCategory('Masala & Dry Fruits')">
                 <img src="https://snnfoods.com/cdn/shop/articles/snn-blog-1-image-151086.jpg?v=1710844801" alt="Masala & Dry Fruits">
-                <p>Masala & Dry Fruits</p>
+                <p>Body care</p>
             </div>
             <div class="category" onclick="openCategory('Rice')">
                 <img src="https://media.gettyimages.com/id/1157969278/photo/various-brands-of-basmati-rice-bags-for-sale.jpg?s=612x612&w=gi&k=20&c=o5oZ7JKpSflYaqxBxwTipBpUSsF1GYbIFE-wCjriVBc=" alt="Rice">
@@ -57,7 +54,7 @@
             </div>
             <div class="category" onclick="openCategory('Beverages')">
                 <img src="https://www.tastingtable.com/img/gallery/21-indian-drinks-you-need-to-try-at-least-once/l-intro-1718799368.jpg" alt="Beverages">
-                <p>Beverages</p>
+                <p>drinks</p>
             </div>
             <div class="category" onclick="openCategory('Cleaning & Household')">
                 <img src="https://5.imimg.com/data5/SELLER/Default/2022/10/NK/DL/UX/1651149/household-cleaning-products-formulation-consulting.jpeg" alt="Cleaning & Household">
