--- a/gadd.html
+++ b/gadd.html
@@ -42,7 +42,7 @@
     </div>
 
     <script>
-        const ADMIN_PASS = "admin123"; // Must match server
+        const ADMIN_PASS = "Brand"; // Must match server
         let categories = [];
         let currentCategory = "";
 
